--- a/package.json
+++ b/package.json
@@ -39,8 +39,11 @@
     "feathers-authentication-management": "^2.0.1",
     "feathers-hooks-common": "^4.20.7",
     "feathers-mailer": "^3.0.1",
+    "feathers-mongoose": "^8.3.1",
     "feathers-nedb": "^5.0.1",
     "helmet": "^3.19.0",
+    "mongodb-core": "^3.2.7",
+    "mongoose": "^5.10.0",
     "nedb": "^1.8.0",
     "nodemailer-smtp-transport": "^2.7.4",
     "serve-favicon": "^2.5.0",
